<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/tv_edit_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/create_tag_title_hint_example"
            android:textSize="@dimen/text_size_middle"
            android:lineSpacingExtra="4dp"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelAlwaysShown="true"
            app:met_floatingLabelText="@string/create_tag_title_hint"
            app:met_floatingLabelTextColor="?attr/colorPrimary"
            app:met_primaryColor="?attr/colorPrimary"
            app:met_baseColor="@color/text_color_primary"
            app:met_hideUnderline="false"
            app:met_minCharacters="1"
            app:met_maxCharacters="20"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/tv_edit_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/create_everyface_desc_hint_example"
            android:textSize="@dimen/text_size_middle"
            android:lineSpacingExtra="4dp"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelAlwaysShown="true"
            app:met_floatingLabelText="@string/create_everyface_desc_hint"
            app:met_floatingLabelTextColor="?attr/colorPrimary"
            app:met_primaryColor="?attr/colorPrimary"
            app:met_baseColor="@color/text_color_primary"
            app:met_hideUnderline="false"/>

        <TextView
            android:id="@+id/tv_create_time_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/create_time_line_default"
            android:textColor="@color/grey"
            android:textSize="@dimen/abc_text_size_small_material" />

    </LinearLayout>

</RelativeLayout>